tests/baselines/reference/assignmentCompatability13.errors.txt
tests/cases/compiler/assignmentCompatability13.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ two: 文字; }'.
  Property 'two' is optional in type 'interfaceWithPublicAndOptional<数字, 文字>' but required in type '{ two: 文字; }'.


==== tests/cases/compiler/assignmentCompatability13.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var obj = {two: "1"};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<数字, 文字>' is not assignable to type '{ two: 文字; }'.
!!! error TS2322:   Property 'two' is optional in type 'interfaceWithPublicAndOptional<数字, 文字>' but required in type '{ two: 文字; }'.